tests/grammar/quant/any/simple_invalid_0/stderr.golden
error[E3M38]: EvaluationError
  --> ${CWD}/main.k:10:8
   |
10 | main = app_conf {
   |        ^ Instance check failed
   |
 --> ${CWD}/main.k:7:1
  |
7 |         }, "no server defined"
  |  Check failed on the condition: no server defined
  |